--- a/appartmentsearch.html
+++ b/appartmentsearch.html
@@ -20,10 +20,10 @@
                 <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
                 <li><a href="appartmentsearch.html">Поиск жилья</a></li>
                 <li><a href="legalisation.html">Вид на жительство</a></li>
-                <li><a href="bankcards.html">Деньги</a></li>
+                <li><a href="money.html">Деньги</a></li>
                 <li><a href="fop.html">ФОП</a></li>
                 <li><a href="lviv.html">Львов</a></li>
-                <li><a href="viza.html">Поиск жилья</a></li>
+                <li><a href="viza.html">Визы</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo.png" alt="logo"
                     class="navigation__img"></a>
@@ -36,23 +36,90 @@
                     <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
                     <li><a class="navigation-mobile__item" href="appartmentsearch.html">Поиск жилья</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">Вид на жительство</a></li>
-                    <li><a class="navigation-mobile__item" href="bankcards.html">Деньги</a></li>
+                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
-                    <li><a class="navigation-mobile__item" href="viza.html">Поиск жилья</a></li>
+                    <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
                 </ul>
             </div>
         </div>
     </header>
-    <section class="container appartment__section">
+    <section class="container entry__section">
         <h2>Поиск жилья</h1>
             <div class="appartment__link">
-                <a href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/"><i class="fas fa-home"></i></a>
-                <a href=" https://www.facebook.com/groups/rent032/"><i class="fas fa-home"></i></a>
-                <a href="https://www.facebook.com/groups/nomakler.lviv/"><i class="fas fa-home"></i></a>
-                <a href="https://t.me/orendakvartyrlviv"><i class="fas fa-home"></i></a>
+                <div class="appartment__item">
+                    <a class="link" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
+                        <i class="fas fa-house-user"></i>
+                        olx.ua
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href="https://www.real-estate.lviv.ua">
+                        <i class="fas fa-house-user"></i>
+                        real-estate.lviv.ua
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href="https://t.me/neruhomist_lviv_ua">
+                        <i class="fab fa-telegram"></i>
+                        telegram
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href="https://t.me/orendakvartyrlviv">
+                        <i class="fab fa-telegram"></i>
+                        telegram
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href="https://t.me/neruhomist_lviv_ua">
+                        <i class="fab fa-telegram"></i>
+                        telegram
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href=" https://www.facebook.com/groups/rent032/">
+                        <i class="fab fa-facebook"></i>
+                        facebook
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href="https://www.facebook.com/groups/nomakler.lviv/">
+                        <i class="fab fa-facebook"></i>
+                        facebook
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href="https://www.facebook.com/groups/448598442160044/?ref=share">
+                        <i class="fab fa-facebook"></i>
+                        facebook
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href="https://www.facebook.com/groups/realtyua/?ref=share">
+                        <i class="fab fa-facebook"></i>
+                        facebook
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href="https://www.facebook.com/groups/rentlvivnomakler/?ref=share">
+                        <i class="fab fa-facebook"></i>
+                        facebook
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href="https://www.facebook.com/groups/HLorenda/?ref=share">
+                        <i class="fab fa-facebook"></i>
+                        facebook
+                    </a>
+                </div>
+                <div class="appartment__item">
+                    <a class="link" href="https://www.facebook.com/groups/orendra/?ref=share">
+                        <i class="fab fa-facebook"></i>
+                        facebook
+                    </a>
+                </div>
             </div>
-
     </section>
 </body>
 
