--- a/entry.html
+++ b/entry.html
@@ -20,10 +20,10 @@
                 <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
                 <li><a href="appartmentsearch.html">Поиск жилья</a></li>
                 <li><a href="legalisation.html">Вид на жительство</a></li>
-                <li><a href="bankcards.html">Деньги</a></li>
+                <li><a href="money.html">Деньги</a></li>
                 <li><a href="fop.html">ФОП</a></li>
                 <li><a href="lviv.html">Львов</a></li>
-                <li><a href="viza.html">Поиск жилья</a></li>
+                <li><a href="viza.html">Визы</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo.png" alt="logo"
                     class="navigation__img"></a>
@@ -36,21 +36,37 @@
                     <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
                     <li><a class="navigation-mobile__item" href="appartmentsearch.html">Поиск жилья</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">Вид на жительство</a></li>
-                    <li><a class="navigation-mobile__item" href="bankcards.html">Деньги</a></li>
+                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
-                    <li><a class="navigation-mobile__item" href="viza.html">Поиск жилья</a></li>
+                    <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
                 </ul>
             </div>
         </div>
     </header>
     <section class="container entry__section">
         <h2>Въезд в Украину</h2>
-        <p>Ознакомиться с актуальной информацией можно на сайте Минздрава Украины (https://moz.gov.ua/ ).</p>
-        <p>Выезд из Беларуси через наземные пункты пропуска с временным ВНЖ
-            Временный вид на жительство в Украине не является причиной для выезда из Беларуси (только постоянный
-            ВНЖ).
-            Официальный ответ ГПК</p>
+        <h3>Ознакомиться с актуальной информацией можно на сайте Минздрава Украины:</h3>
+        <a href="https://moz.gov.ua/" class="entry__link"> https://moz.gov.ua/</a>
+        <h3>Основная Информация для въезда в Украину:</h3>
+        <a href="https://visitukraine.today/ru" class="entry__link">visitukraine.today</a>
+        <a href="https://t.me/bel_ukr" class="entry__link"><i class="fab fa-telegram"></i>telegram</a>
+        </div>
+        <h4>Основание: "Лечение"</h4>
+        <h5>Для белорусских пограничников:</h5>
+        <ol>
+            <li>Приглашение от медицинской клиники на фирменном бланке с печатью, 
+                    прислано по почте, распечатано на цветном принтере</li>
+            <li>Приказ Мин Здравоохранения Украины о выдаче лицензии клинике (на всякий случай)</li>
+        </ol>
+        <h5>Для украинских пограничников:</h5>
+        <ol>
+            <li>ПЦР тест</li>
+            <li>Страховка от ураинской страховой Обериг, купленная онлайн и распечатанная</li>
+            <li>Установленное приложение Вдома, которое будет активировано после проверки пограничником введенных в приложение паспортных данных 
+                (куплен виртуальный украинский номер для получения смс, которые перенаправляются на электронную почту, 
+                куплен пакет роуминга для доступа в интернет на украинском пропускном пункте)</li>
+        </ol>
     </section>
 </body>
 
