--- a/fop.html
+++ b/fop.html
@@ -1,38 +1,90 @@
-Пошаговая инструкция открытия ФОП от участника группы @bellviv:
-1.Дагавор арэнды жылля.
-2.Пераклад пашпарта ў натарыўса.
-3.Палучэнне Ідынтыфікацыйнага нумару ў Падатковай
-4.Рэгістрацыя ФОП у СНАП.
-5.Рэгістрацыя ФОП у Падатковай.
-дополнение от пользователя Verym Mozham:
-идёте в налоговую и получаете ИНН - потребуется заверенный перевод паспорта и его копия, копию заберут - затем с ИНН и
-его копией идёте в другой кабинет налоговой и получаете ЭЦП - тут заберут оригинал перевода. С этим ЭЦП заходите на сайт
-Дии, заполняете там паспортные данные и заявляетесь на ФОП. Его открывают за сутки
+<!DOCTYPE html>
+<html lang="en">
 
-Полезная информация обладателям ФОПа:
-ФЛП имеет два счета:
-- предпринимательский текущий счет (2600)
-- текущий или карточный личный счет для собственных нужд физического лица (2620).
-Постановление НБУ № 89 от 11.09.2017 г.[1]
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>FOP</title>
+</head>
 
-ФЛП, открывая текущий счет в банке, имеет право открыть также карточный счет для собственных нужд физического лица.
-К текущим счетам банки выпускают платежные карточки, которые фактически работают как «ключ к счету».
-ЗУ «О платежных системах и переводе средств в Украине».[2]
+<body>
+    <header>
+        <div class="container nav__container">
+            <ul class="navigation__menu">
+                <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
+                <li><a href="appartmentsearch.html">Поиск жилья</a></li>
+                <li><a href="legalisation.html">Вид на жительство</a></li>
+                <li><a href="money.html">Деньги</a></li>
+                <li><a href="fop.html">ФОП</a></li>
+                <li><a href="lviv.html">Львов</a></li>
+                <li><a href="viza.html">Визы</a></li>
+            </ul>
+            <a class="navigation__home" href="index.html"><img src="img/logo.png" alt="logo"
+                    class="navigation__img"></a>
+            <div class="navigation__mobile">
+                <input id="navigation-mobile__toggle" type="checkbox" />
+                <label class="navigation-mobile__btn" for="navigation-mobile__toggle">
+                    <span></span>
+                </label>
+                <ul class="navigation-mobile__box">
+                    <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
+                    <li><a class="navigation-mobile__item" href="appartmentsearch.html">Поиск жилья</a></li>
+                    <li><a class="navigation-mobile__item" href="legalisation.html">Вид на жительство</a></li>
+                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+                    <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
+                    <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
+                    <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <section class="container fop__section">
+        <h2>Пошаговая инструкция открытия ФОП от участника группы <span>@bellviv:</span></h2>
+        <ol>
+            <li>Дагавор арэнды жылля.</li>
+            <li>Пераклад пашпарта ў натарыўса.</li>
+            <li>Палучэнне Ідынтыфікацыйнага нумару ў Падатковай</li>
+            <li>Рэгістрацыя ФОП у СНАП.</li>
+            <li>Рэгістрацыя ФОП у Падатковай.</li>
+        </ol>
+        <h2>
+            Дополнение от пользователя <span>Verym Mozham</span>:
+        </h2>
+        <p>- идёте в налоговую и получаете ИНН - потребуется заверенный перевод паспорта и его копия, копию заберут - затем с ИНН и
+            его копией идёте в другой кабинет налоговой и получаете ЭЦП - тут заберут оригинал перевода. С этим ЭЦП заходите на сайт
+            Дии, заполняете там паспортные данные и заявляетесь на ФОП. Его открывают за сутки</p>
+        <h2>Полезная информация обладателям ФОПа:</h2>
+        <h4>ФЛП имеет два счета:</h4>
+        <ol>
+            <li>предпринимательский текущий счет (2600)</li>
+            <li>текущий или карточный личный счет для собственных нужд физического лица (2620).</li>
+        </ol>
+        <h3>Постановление НБУ № 89 от 11.09.2017 г.[1]</h3>
+        <p>ФЛП, открывая текущий счет в банке, имеет право открыть также карточный счет для собственных нужд физического лица.
+            К текущим счетам банки выпускают платежные карточки, которые фактически работают как «ключ к счету».
+            ЗУ «О платежных системах и переводе средств в Украине».[2]</p>
+        <p>Если ФЛП перечисляет с текущего счета (2600) НЕ на свою личную карточку, а, например, члену семьи: родителям, мужу или
+            жене, детям (пп. 14.1.263 ст. 14 НКУ[3]) или другим физическим лицам, то такое перечисление облагается налогом как
+            дополнительное благо НДФЛ-18% и военным сбором 1,5% (п. 174.6 ст.174 НКУ[4]). Кроме того, учитывая п. 176.2 ст. 176 НКУ,
+            ФЛП становится налоговым агентом по отношению к таким физлицам.
+            Если ФЛП перечисляет предпринимательский доход на свой карточный счет (2620), а уже потом перечисляет деньги таким
+            родственникам, то налогообложение составляет 0% (п. 174.6 ст. 174 НКУ[5]).</p>
+        <p>При этом, необходимо учитывать, что перевод денег с карточного счета физического лица на карточный счет физического лица
+            (не из числа членов семьи) без указания конкретного вида дохода может быть расценено налоговым органом у получателя
+            физлица как получение прочего дохода (п. 164.2.20 НКУ[6]) и обложено НДФЛ-18% и военным сбором 1,5%.
+            Если речь идет о регулярных платежах, например, «вернул долг за обед друга 10 раз за месяц», то такие переводы могут
+            быть расценены как ведение предпринимательской деятельности, без соответствующей регистрации для получателя средств.
+            Если говорить о единоразовых переводах на физ лиц, то рекомендуется указывать назначение платежа («бронь домика»,
+            «оплата товара»), при этом избегать регулярных переводов и больших сумм.</p>
+        <p>Пополнять свой карточный счет наличными в терминалах можно при условии, что в случае возникновения вопросов у налогового
+            органа о происхождении дохода, вы сможете доказать такой доход.</p>
+    </section>
+</body>
 
-Если ФЛП перечисляет с текущего счета (2600) НЕ на свою личную карточку, а, например, члену семьи: родителям, мужу или
-жене, детям (пп. 14.1.263 ст. 14 НКУ[3]) или другим физическим лицам, то такое перечисление облагается налогом как
-дополнительное благо НДФЛ-18% и военным сбором 1,5% (п. 174.6 ст.174 НКУ[4]). Кроме того, учитывая п. 176.2 ст. 176 НКУ,
-ФЛП становится налоговым агентом по отношению к таким физлицам.
-Если ФЛП перечисляет предпринимательский доход на свой карточный счет (2620), а уже потом перечисляет деньги таким
-родственникам, то налогообложение составляет 0% (п. 174.6 ст. 174 НКУ[5]).
-
-При этом, необходимо учитывать, что перевод денег с карточного счета физического лица на карточный счет физического лица
-(не из числа членов семьи) без указания конкретного вида дохода может быть расценено налоговым органом у получателя
-физлица как получение прочего дохода (п. 164.2.20 НКУ[6]) и обложено НДФЛ-18% и военным сбором 1,5%.
-Если речь идет о регулярных платежах, например, «вернул долг за обед друга 10 раз за месяц», то такие переводы могут
-быть расценены как ведение предпринимательской деятельности, без соответствующей регистрации для получателя средств.
-Если говорить о единоразовых переводах на физ лиц, то рекомендуется указывать назначение платежа («бронь домика»,
-«оплата товара»), при этом избегать регулярных переводов и больших сумм.
-
-Пополнять свой карточный счет наличными в терминалах можно при условии, что в случае возникновения вопросов у налогового
-органа о происхождении дохода, вы сможете доказать такой доход.
+</html>
