--- a/money.html
+++ b/money.html
@@ -44,9 +44,29 @@
             </div>
         </div>
     </header>
-    <section class="container title__section">
-        <h2>Добро пожаловать</h2>
-        <h1>во Львов</h1>
+    <section class="container money__section">
+        <h1></h1>
+        <h2>Открытие счета в украинском банке (выпуск карты)</h2>
+        <p>По опыту участников чата можно выпустить карту в а-банке, Приватбанке и ПУМБ.
+            Ограничение - резиденты Украины не смогут сделать перевод со своей карты на карту нерезидента.</p>
+        <h3>Открытие счета в украинском банке (выпуск карты) по бел. паспорту</h3>
+        <ul>
+            <li>Открытие валютной карты в Райффайзен банке (Yuri)
+                Спачатку сказалі, што не можна. 
+                Калі сказаў што у тэхнічнай падтрымкі адказалі што можна адчынілі.
+                Патрэбна:
+                <ol>
+                    <li>Пашпарт</li>
+                    <li>Часовы від на жыхарства.
+                        (Посвідка на тимчасове проживання)
+                        Можна і без часовага віда на жыхарства</li>
+                    <li>Ідэнтыфікатар плацельшчыка падаткаў</li>
+                </ol>
+            </li>
+            <li>У прываце і укрсібе рабiлi без ідэнтыфікатара плацельшчыка падаткаў (у прываце з посвідкай але без іпн, ва ўкрсібе
+                увогуле па пашпарту рб).</li>
+            <li></li>
+        </ul>
     </section>
 </body>
 
