--- a/entry.html
+++ b/entry.html
@@ -47,10 +47,15 @@
     <section class="container entry__section">
         <h2>Въезд в Украину</h2>
         <h3>Ознакомиться с актуальной информацией можно на сайте Минздрава Украины:</h3>
-        <a href="https://moz.gov.ua/" class="entry__link"> https://moz.gov.ua/</a>
+        <div class="links">
+            <a href="https://moz.gov.ua/" class="entry__link"> https://moz.gov.ua/</a>
+        </div>
         <h3>Основная Информация для въезда в Украину:</h3>
-        <a href="https://visitukraine.today/ru" class="entry__link">visitukraine.today</a>
-        <a href="https://t.me/bel_ukr" class="entry__link"><i class="fab fa-telegram"></i>telegram</a>
+        <div class="links">
+            <a href="https://visitukraine.today/ru" class="entry__link">visitukraine.today</a>
+            <a href="https://t.me/bel_ukr" class="entry__link"><i class="fab fa-telegram"></i>telegram</a>
+        </div>
+        
         </div>
         <h4>Основание: "Лечение"</h4>
         <h5>Для белорусских пограничников:</h5>
