--- a/entry.html
+++ b/entry.html
@@ -53,7 +53,7 @@
         <h3>Основная Информация для въезда в Украину:</h3>
         <div class="links">
             <a href="https://visitukraine.today/ru" class="entry__link">visitukraine.today</a>
-            <a href="https://t.me/bel_ukr" class="entry__link"><i class="fab fa-telegram"></i>telegram</a>
+            <a href="https://t.me/bel_ukr" class="entry__link"><i class="fab fa-telegram"></i>BY_UA въезд-выезд, машины, отдых</a>
         </div>
         
         </div>
