--- a/appartmentsearch.html
+++ b/appartmentsearch.html
@@ -25,14 +25,14 @@
                 <li><a href="lviv.html">Львов</a></li>
                 <li><a href="viza.html">Визы</a></li>
             </ul>
-            <a class="navigation__home" href="index.html"><img src="img/logo.png" alt="logo"
+            <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
                     class="navigation__img"></a>
             <div class="navigation__mobile">
                 <input id="navigation-mobile__toggle" type="checkbox" />
                 <label class="navigation-mobile__btn" for="navigation-mobile__toggle">
                     <span></span>
                 </label>
-                <ul class="navigation-mobile__box">
+                <ul class="navigation-mobile__box" id="navbar">
                     <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
                     <li><a class="navigation-mobile__item" href="appartmentsearch.html">Поиск жилья</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">Вид на жительство</a></li>
@@ -44,83 +44,78 @@
             </div>
         </div>
     </header>
-    <section class="container entry__section">
+    <section class="container rent__section">
         <h2>Поиск жилья</h1>
-            <div class="appartment__link">
-                <div class="appartment__item">
-                    <a class="link" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
+            <div class="rent__box">
+                <div class="rent__item">
+                    <a class="rent__link" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
                         <i class="fas fa-house-user"></i>
-                        olx.ua
+                        <p class="rent__name">olx.ua</p>
                     </a>
                 </div>
-                <div class="appartment__item">
-                    <a class="link" href="https://www.real-estate.lviv.ua">
+                <div class="rent__item">
+                    <a class="rent__link" href="https://www.real-estate.lviv.ua">
                         <i class="fas fa-house-user"></i>
-                        real-estate.lviv.ua
+                        <p class="rent__name">real-estate.lviv.ua</p>
                     </a>
                 </div>
-                <div class="appartment__item">
-                    <a class="link" href="https://t.me/neruhomist_lviv_ua">
+                <div class="rent__item">
+                    <a class="rent__link" href="https://t.me/neruhomist_lviv_ua">
                         <i class="fab fa-telegram"></i>
-                        telegram
+                        <p class="rent__name">Нерухомість Львів</p>
                     </a>
                 </div>
-                <div class="appartment__item">
-                    <a class="link" href="https://t.me/orendakvartyrlviv">
+                <div class="rent__item">
+                    <a class="rent__link" href="https://t.me/orendakvartyrlviv">
                         <i class="fab fa-telegram"></i>
-                        telegram
+                        <p class="rent__name">Оренда. Квартири. Кімнати. Львів.</p>
                     </a>
                 </div>
-                <div class="appartment__item">
-                    <a class="link" href="https://t.me/neruhomist_lviv_ua">
-                        <i class="fab fa-telegram"></i>
-                        telegram
-                    </a>
-                </div>
-                <div class="appartment__item">
-                    <a class="link" href=" https://www.facebook.com/groups/rent032/">
+                <div class="rent__item">
+                    <a class="rent__link" href=" https://www.facebook.com/groups/rent032/">
                         <i class="fab fa-facebook"></i>
-                        facebook
+                        <p class="rent__name">Оренда У Львові БЕЗ маклерів !Rent Lviv !No Makler!</p>
                     </a>
                 </div>
-                <div class="appartment__item">
-                    <a class="link" href="https://www.facebook.com/groups/nomakler.lviv/">
+                <div class="rent__item">
+                    <a class="rent__link" href="https://www.facebook.com/groups/nomakler.lviv/">
                         <i class="fab fa-facebook"></i>
-                        facebook
+                        <p class="rent__name">No makler - Львів</p>
                     </a>
                 </div>
-                <div class="appartment__item">
-                    <a class="link" href="https://www.facebook.com/groups/448598442160044/?ref=share">
+                <div class="rent__item">
+                    <a class="rent__link" href="https://www.facebook.com/groups/448598442160044/?ref=share">
                         <i class="fab fa-facebook"></i>
-                        facebook
+                        <p class="rent__name">Оренда квартир Львів , Нерухомість у Львові , Продаж квартир у Львові</p>
                     </a>
                 </div>
-                <div class="appartment__item">
-                    <a class="link" href="https://www.facebook.com/groups/realtyua/?ref=share">
+                <div class="rent__item">
+                    <a class="rent__link" href="https://www.facebook.com/groups/realtyua/?ref=share">
                         <i class="fab fa-facebook"></i>
-                        facebook
+                        <p class="rent__name">Нерухомість у Львові, Квартири Львова, Оренда та продаж Львів</p>
                     </a>
                 </div>
-                <div class="appartment__item">
-                    <a class="link" href="https://www.facebook.com/groups/rentlvivnomakler/?ref=share">
+                <div class="rent__item">
+                    <a class="rent__link" href="https://www.facebook.com/groups/rentlvivnomakler/?ref=share">
                         <i class="fab fa-facebook"></i>
-                        facebook
+                        <p class="rent__name">Оренда без маклера Квартири кімнати Львів Оренда у Львові БЕЗ ПОСЕРЕДНИКІВ</p>
                     </a>
                 </div>
-                <div class="appartment__item">
-                    <a class="link" href="https://www.facebook.com/groups/HLorenda/?ref=share">
+                <div class="rent__item">
+                    <a class="rent__link" href="https://www.facebook.com/groups/HLorenda/?ref=share">
                         <i class="fab fa-facebook"></i>
-                        facebook
+                        <p class="rent__name">оренда хат без маклєрят</p>
                     </a>
                 </div>
-                <div class="appartment__item">
-                    <a class="link" href="https://www.facebook.com/groups/orendra/?ref=share">
+                <div class="rent__item">
+                    <a class="rent__link" href="https://www.facebook.com/groups/orendra/?ref=share">
                         <i class="fab fa-facebook"></i>
-                        facebook
+                        <p class="rent__name">ОРЕНДА КВАРТИР ЛЬВІВ БЕЗ ПОСЕРЕДНИКІВ</p>
                     </a>
                 </div>
             </div>
     </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
