--- a/fop.html
+++ b/fop.html
@@ -18,14 +18,14 @@
         <div class="container nav__container">
             <ul class="navigation__menu">
                 <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
-                <li><a href="appartmentsearch.html">Поиск жилья</a></li>
-                <li><a href="legalisation.html">Вид на жительство</a></li>
-                <li><a href="money.html">Деньги</a></li>
+                <li><a href="rent.html">Поиск жилья</a></li>
+                <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
-                <li><a href="lviv.html">Львов</a></li>
                 <li><a href="viza.html">Визы</a></li>
+                <li><a href="money.html">Деньги</a></li>
+                <li><a href="lviv.html">Львов</a></li>
             </ul>
-            <a class="navigation__home" href="index.html"><img src="img/logo.png" alt="logo"
+            <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
                     class="navigation__img"></a>
             <div class="navigation__mobile">
                 <input id="navigation-mobile__toggle" type="checkbox" />
@@ -34,12 +34,12 @@
                 </label>
                 <ul class="navigation-mobile__box">
                     <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
-                    <li><a class="navigation-mobile__item" href="appartmentsearch.html">Поиск жилья</a></li>
-                    <li><a class="navigation-mobile__item" href="legalisation.html">Вид на жительство</a></li>
-                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+                    <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
+                    <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-                    <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
                     <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+                    <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
                 </ul>
             </div>
         </div>
