--- a/money.html
+++ b/money.html
@@ -22,7 +22,7 @@
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
                 <li><a href="viza.html">Визы</a></li>
-                <li><a href="money.html">Деньги</a></li>
+                <li><a href="money.html" class="active">Деньги</a></li>
                 <li><a href="lviv.html">Львов</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
