--- a/viza.html
+++ b/viza.html
@@ -21,7 +21,7 @@
                 <li><a href="rent.html">Поиск жилья</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
-                <li><a href="viza.html">Визы</a></li>
+                <li><a href="viza.html" class="active">Визы</a></li>
                 <li><a href="money.html">Деньги</a></li>
                 <li><a href="lviv.html">Львов</a></li>
             </ul>
