--- a/entry.html
+++ b/entry.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container nav__container">
             <ul class="navigation__menu">
-                <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
+                <li><a href="entry.html" class="active">Выезд/Въезд/Тест</a></li>
                 <li><a href="rent.html">Поиск жилья</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
