--- a/fop.html
+++ b/fop.html
@@ -20,7 +20,7 @@
                 <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
                 <li><a href="rent.html">Поиск жилья</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
-                <li><a href="fop.html">ФОП</a></li>
+                <li><a href="fop.html" class="active">ФОП</a></li>
                 <li><a href="viza.html">Визы</a></li>
                 <li><a href="money.html">Деньги</a></li>
                 <li><a href="lviv.html">Львов</a></li>
