--- a/lviv.html
+++ b/lviv.html
@@ -23,7 +23,7 @@
                 <li><a href="fop.html">ФОП</a></li>
                 <li><a href="viza.html">Визы</a></li>
                 <li><a href="money.html">Деньги</a></li>
-                <li><a href="lviv.html">Львов</a></li>
+                <li><a href="lviv.html" class="active">Львов</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
                     class="navigation__img"></a>
