--- a/rent.html
+++ b/rent.html
@@ -18,7 +18,7 @@
         <div class="container nav__container">
             <ul class="navigation__menu">
                 <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
-                <li><a href="rent.html">Поиск жилья</a></li>
+                <li><a href="rent.html" class="active">Поиск жилья</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
                 <li><a href="viza.html">Визы</a></li>
