--- a/index.html
+++ b/index.html
@@ -10,45 +10,65 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
     <title>Home</title>
 </head>
 
 <body>
-    <header>
-        <div class="container nav__container">
-            <ul class="navigation__menu">
-                <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
-                <li><a href="rent.html">Поиск жилья</a></li>
-                <li><a href="legalisation.html">ВНЖ</a></li>
-                <li><a href="fop.html">ФОП</a></li>
-                <li><a href="viza.html">Визы</a></li>
-                <li><a href="money.html">Деньги</a></li>
-                <li><a href="lviv.html">Львов</a></li>
-            </ul>
-            <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
-                    class="navigation__img"></a>
-            <div class="navigation__mobile">
-                <input id="navigation-mobile__toggle" type="checkbox" />
-                <label class="navigation-mobile__btn" for="navigation-mobile__toggle">
-                    <span></span>
-                </label>
-                <ul class="navigation-mobile__box">
-                    <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
-                    <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
-                    <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
-                    <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-                    <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
-                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
-                    <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
-    <section class="container title__section">
-        <h2>Добро пожаловать</h2>
-        <h1>во Львов</h1>
-        
-    </section>
+  <header>
+    <div class="container nav__container">
+      <ul class="navigation__menu">
+        <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
+        <li><a href="rent.html">Поиск жилья</a></li>
+        <li><a href="legalisation.html">ВНЖ</a></li>
+        <li><a href="fop.html">ФОП</a></li>
+        <li><a href="viza.html">Визы</a></li>
+        <li><a href="money.html">Деньги</a></li>
+        <li><a href="lviv.html">Львов</a></li>
+      </ul>
+      <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
+              class="navigation__img"></a>
+      <div class="navigation__mobile">
+        <input id="navigation-mobile__toggle" type="checkbox" />
+        <label class="navigation-mobile__btn" for="navigation-mobile__toggle">
+          <span></span>
+        </label>
+        <ul class="navigation-mobile__box">
+          <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
+          <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
+          <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
+          <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
+          <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+          <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+          <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <section class="container">
+    <div class="title__section">
+      <h2>Добро пожаловать</h2>
+      <h1>во Львов</h1>
+    </div>
+    <div class="lesson">
+      <h3>Курсы беларускай<br>
+        і ўкраінскай мовы<br>
+        ў Львове</h3>
+      <p class="text">Кожную няделю<br>
+        Бел. а 15:00,<br>
+        Укр. а 16:00
+        </p>
+    </div>
+    <div class="meet">
+      <h3>Курсы беларускай<br>
+        і ўкраінскай мовы<br>
+        ў Львове</h3>
+      <p class="text">Кожную няделю<br>
+        Бел. а 15:00, Укр. а 16:00
+        </p>
+    </div>
+  </section>
+  <script src="script.js"></script>
 </body>
 
 </html>
