--- a/rent.html
+++ b/rent.html
@@ -14,108 +14,121 @@
 </head>
 
 <body>
-    <header>
-        <div class="container nav__container">
-            <ul class="navigation__menu">
-                <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
-                <li><a href="rent.html" class="active">Поиск жилья</a></li>
-                <li><a href="legalisation.html">ВНЖ</a></li>
-                <li><a href="fop.html">ФОП</a></li>
-                <li><a href="viza.html">Визы</a></li>
-                <li><a href="money.html">Деньги</a></li>
-                <li><a href="lviv.html">Львов</a></li>
-            </ul>
-            <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
-                    class="navigation__img"></a>
-            <div class="navigation__mobile">
-                <input id="navigation-mobile__toggle" type="checkbox" />
-                <label class="navigation-mobile__btn" for="navigation-mobile__toggle">
-                    <span></span>
-                </label>
-                <ul class="navigation-mobile__box" id="navbar">
-                    <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
-                    <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
-                    <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
-                    <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-                    <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
-                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
-                    <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
-                </ul>
-            </div>
+  <header>
+    <div class="container nav__container">
+      <ul class="navigation__menu">
+        <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
+        <li><a href="rent.html" class="active">Поиск жилья</a></li>
+        <li><a href="legalisation.html">ВНЖ</a></li>
+        <li><a href="fop.html">ФОП</a></li>
+        <li><a href="viza.html">Визы</a></li>
+        <li><a href="money.html">Деньги</a></li>
+        <li><a href="lviv.html">Львов</a></li>
+      </ul>
+      <a class="navigation__home" href="index.html">
+        <img src="img/logo2.jpg" alt="logo"
+              class="navigation__img">
+      </a>
+      <div class="navigation__mobile">
+        <input id="navigation-mobile__toggle" type="checkbox" />
+        <label class="navigation-mobile__btn" for="navigation-mobile__toggle">
+          <span></span>
+        </label>
+        <ul class="navigation-mobile__box" id="navbar">
+          <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
+          <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
+          <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
+          <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
+          <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
+          <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+          <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <section class="container rent__section">
+    <h2>Поиск жилья</h1>
+    <div class="rent__box">
+      <a class="rent__link" target="blank" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/olx-logo-60h.png" alt="">
+          <p class="rent__title">olx.ua</p>
+          <p class="rent__text">nedvizhimost/kvartiry-komnaty</p>
         </div>
-    </header>
-    <section class="container rent__section">
-        <h2>Поиск жилья</h1>
-            <div class="rent__box">
-                <div class="rent__item">
-                    <a class="rent__link" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
-                        <i class="fas fa-house-user"></i>
-                        <p class="rent__name">olx.ua</p>
-                    </a>
-                </div>
-                <div class="rent__item">
-                    <a class="rent__link" href="https://www.real-estate.lviv.ua">
-                        <i class="fas fa-house-user"></i>
-                        <p class="rent__name">real-estate.lviv.ua</p>
-                    </a>
-                </div>
-                <div class="rent__item">
-                    <a class="rent__link" href="https://t.me/neruhomist_lviv_ua">
-                        <i class="fab fa-telegram"></i>
-                        <p class="rent__name">Нерухомість Львів</p>
-                    </a>
-                </div>
-                <div class="rent__item">
-                    <a class="rent__link" href="https://t.me/orendakvartyrlviv">
-                        <i class="fab fa-telegram"></i>
-                        <p class="rent__name">Оренда. Квартири. Кімнати. Львів.</p>
-                    </a>
-                </div>
-                <div class="rent__item">
-                    <a class="rent__link" href=" https://www.facebook.com/groups/rent032/">
-                        <i class="fab fa-facebook"></i>
-                        <p class="rent__name">Оренда У Львові БЕЗ маклерів !Rent Lviv !No Makler!</p>
-                    </a>
-                </div>
-                <div class="rent__item">
-                    <a class="rent__link" href="https://www.facebook.com/groups/nomakler.lviv/">
-                        <i class="fab fa-facebook"></i>
-                        <p class="rent__name">No makler - Львів</p>
-                    </a>
-                </div>
-                <div class="rent__item">
-                    <a class="rent__link" href="https://www.facebook.com/groups/448598442160044/?ref=share">
-                        <i class="fab fa-facebook"></i>
-                        <p class="rent__name">Оренда квартир Львів , Нерухомість у Львові , Продаж квартир у Львові</p>
-                    </a>
-                </div>
-                <div class="rent__item">
-                    <a class="rent__link" href="https://www.facebook.com/groups/realtyua/?ref=share">
-                        <i class="fab fa-facebook"></i>
-                        <p class="rent__name">Нерухомість у Львові, Квартири Львова, Оренда та продаж Львів</p>
-                    </a>
-                </div>
-                <div class="rent__item">
-                    <a class="rent__link" href="https://www.facebook.com/groups/rentlvivnomakler/?ref=share">
-                        <i class="fab fa-facebook"></i>
-                        <p class="rent__name">Оренда без маклера Квартири кімнати Львів Оренда у Львові БЕЗ ПОСЕРЕДНИКІВ</p>
-                    </a>
-                </div>
-                <div class="rent__item">
-                    <a class="rent__link" href="https://www.facebook.com/groups/HLorenda/?ref=share">
-                        <i class="fab fa-facebook"></i>
-                        <p class="rent__name">оренда хат без маклєрят</p>
-                    </a>
-                </div>
-                <div class="rent__item">
-                    <a class="rent__link" href="https://www.facebook.com/groups/orendra/?ref=share">
-                        <i class="fab fa-facebook"></i>
-                        <p class="rent__name">ОРЕНДА КВАРТИР ЛЬВІВ БЕЗ ПОСЕРЕДНИКІВ</p>
-                    </a>
-                </div>
-            </div>
-    </section>
-    <script src="script.js"></script>
+      </a>
+      <a class="rent__link" target="blank" href="https://www.real-estate.lviv.ua">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/real-estate-logo-60h.png" alt="">
+          <p class="rent__title">real-estate.lviv.ua</p>
+          <p class="rent__text"></p>
+        </div>
+      </a>
+      <a class="rent__link" target="blank" href="https://t.me/neruhomist_lviv_ua">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/tg-logo-60h.png" alt="">
+          <p class="rent__title">Нерухомість Львів</p>
+          <p class="rent__text">t.me/neruhomist_lviv_ua</p>
+        </div>
+      </a>
+      <a class="rent__link" target="blank" href="https://t.me/orendakvartyrlviv">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/tg-logo-60h.png" alt="">
+          <p class="rent__title">Оренда. Квартири. Кімнати. Львів.</p>
+          <p class="rent__text">t.me/orendakvartyrlviv</p>
+        </div>
+      </a>
+      <a class="rent__link" target="blank" href=" https://www.facebook.com/groups/rent032/">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <p class="rent__title">Оренда У Львові БЕЗ маклерів!</p>
+          <p class="rent__text">facebook.com/groups/rent032</p>
+        </div>
+      </a>
+      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/nomakler.lviv/">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <p class="rent__title">No makler - Львів</p>
+          <p class="rent__text">fb.com/gr/nomakler.lviv</p>
+        </div>
+      </a>
+      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/448598442160044">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <p class="rent__title">Оренда квартир Львів</p>
+          <p class="rent__text">fb.com/gr/448598442160044</p>
+        </div>
+      </a>
+      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/realtyua">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <p class="rent__title">Нерухомість у Львові/</p>
+          <p class="rent__text">facebook.com/groups/realtyua</p>
+        </div>
+      </a>
+      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/rentlvivnomakler">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <p class="rent__title">Оренда без маклера</p>
+          <p class="rent__text">fb.com/gr/rentlvivnomakler</p>
+        </div>
+      </a>
+      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/HLorenda">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <p class="rent__title">оренда хат без маклєрят</p>
+          <p class="rent__text">facebook.com/groups/HLorenda</p>
+        </div>
+      </a>
+      <a class="rent__link" target="blank" href="https://www.facebook.com/groups/orendra">
+        <div class="rent__item">
+          <img class="rent__logo" src="./img/fb-logo-60h.png" alt="">
+          <p class="rent__title">ОРЕНДА КВАРТИР ЛЬВІВ БЕЗ ПОСЕРЕДНИКІВ</p>
+          <p class="rent__text">facebook.com/groups/orendra</p>
+        </div>
+      </a>
+    </div>
+  </section>
+  <script src="script.js"></script>
 </body>
 
 </html>
