--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Home</title>
@@ -50,24 +51,46 @@
       <h2>Добро пожаловать</h2>
       <h1>во Львов</h1>
     </div>
-    <div class="lesson">
-      <h3>Курсы беларускай<br>
-        і ўкраінскай мовы<br>
-        ў Львове</h3>
-      <p class="text">Кожную няделю<br>
-        Бел. а 15:00,<br>
-        Укр. а 16:00
-        </p>
-    </div>
-    <div class="meet">
-      <h3>Курсы беларускай<br>
-        і ўкраінскай мовы<br>
-        ў Львове</h3>
-      <p class="text">Кожную няделю<br>
-        Бел. а 15:00, Укр. а 16:00
-        </p>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-touch='true'>
+          <div class="description lessons">
+            <h3>Курсы беларускай<br>
+              і ўкраінскай мовы<br>
+              <span>ў Львове</span></h3>
+              <p class="text">Кожную няделю<br>
+                <span>Беларуская а 15:00,<br>
+                  Українська в 16:00</span>
+                
+              </p>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-touch='true'>
+          <div class="description meet">
+            <h3>НЯДЗЕЛЬНАЯ АКЦЫЯ<br>
+              САЛІДАРНАСЦІ<br>
+              БЕЛАРУСАЎ ЛЬВОВА</h3>
+              <p class="text">Кожную няделю, 13:00<br>
+                Помнік Тарасу Шаўчэнку
+              </p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </section>
+  <!-- <script>
+    var myCarousel = document.querySelector('#myCarousel')
+var carousel = new bootstrap.Carousel(myCarousel)
+  </script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 
